<resources>
    <string name="app_name">Makers_Edu_App</string>
    <string name="web_client">635771607678-0ds1bvv3bomp88ou1sb1qlf69bn6cmuo.apps.googleusercontent.com</string>
    <string name="registration_rus">Регистрация</string>
    <string name="last_name_rus">Фамилия</string>
    <string name="name_rus">Имя</string>
    <string name="mail_rus">Почта</string>
    <string name="or_rus">или</string>
    <string name="sign_in_rus">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="recover_rus">восстановить</string>
    <string name="registration">Регистрация</string>
    <string name="not_yet_registrated">Еще не зарегистрированы?</string>
    <string name="password_rus">Пароль</string>
    <string name="detail_rus">подробнее</string>
    <string name="cannot_registrated_rus">Не удалось зарегистрироватся</string>
    <string name="send_email_verification_rus">На вашу почту отправлена ссылка для подтверждения!</string>
    <string name="cannot_send_email_verification_rus">\"Не удалось отправить ссылку для подтверждения на почту \"</string>
    <string name="waiting_verify_rus">Ожидание подтверждения…</string>
    <string name="send_again_rus">Отправить повторно</string>
    <string name="_30">30</string>
    <string name="fill_in_rus">Заполните поля</string>
    <string name="choose_profession_rus">Выбор профессии</string>
    <string name="experience_rus">Стаж работы</string>
    <string name="add_img_rus">Фото</string>
    <string name="career_desc_rus">Краткая информация о карьере</string>
    <string name="add_certificate_and_diploms_photo_rus">Добавьте фото сертификатов/дипломов</string>
    <string name="add_photo_rus">Добавить фото</string>
    <string name="save">Сохранить</string>

    <!--Account fragment xml-->
    <string name="imageViewAvatar">imageViewAvatar</string>
    <string name="tv_title_rus">Введите имя</string>
    <string name="tv_speciality_rus">Введите специальность</string>
    <string name="tv_city_rus">Город:</string>
    <string name="tv_contact_rus">Контакты:</string>
    <string name="tv_education_rus">Образование:</string>
    <string name="tv_experience_rus">Стаж:</string>
    <string name="btn_edit_rus">Редактировать</string>
    <string name="tv_data_city_name_rus">Бишкек</string>
    <string name="tv_data_contact_rus">+996700897680</string>
    <string name="tv_data_education_rus">Программист</string>
    <string name="tv_data_experience_rus">5 лет</string>
    <string name="tv_course_rus">Созданные курсы</string>
    <string name="tv_add_course_rus">Добавить свой курс</string>
<!--    <string name="tv_status_rus">Стаж:</string>-->
<!--    <string name="tv_data_status">5 лет</string>-->

    <!--Nav Menu-->
    <string name="nav_menu_title_account_rus">Личный кабинет</string>

    <!--Edit Account fragment xml-->
    <string name="btn_save_data_rus">Сохранить</string>
    <string name="et_add_name_rus">Имя</string>
    <string name="et_add_speciality_rus">Специальность (профессия)</string>
    <string name="et_add_city_rus">Страна или город</string>
    <string name="et_add_contact_rus">Контакты</string>
    <string name="et_add_education_rus">Образование</string>
    <string name="et_add_experience_rus">Стаж (5 лет)</string>
    <string name="imageview">imageView</string>
    <string name="tv_change_photo_rus">Изменить фото профиля</string>
    <string name="btn_cancel_rus">Отмена</string>

    <!--Edit Account fragment-->
    <string name="et_error_rus">Пожалуйста заполните поле</string>
    <string name="success_data">Success send data</string>
    <string name="error_data">Error data</string>

    <!--Item courses xml-->
    <string name="tv_title_courses_rus">Название курса</string>
    <string name="tv_title_price_courses_rus">Стоимость:</string>
    <string name="tv_price">100,00$</string>
    <string name="tv_description_rus">Программироваание</string>
    <string name="tv_pay_or_free_information_rus">Платно/Бесплатно</string>

</resources>